syntax = "proto3";

option go_package = "./pkg/api/protobuf";

message Vote{
    string ID = 1;
    string PollID = 2;
    uint64 FieldID = 3;
    bool Anonim = 4;
    string UserID = 5; 
}

message RequestGet{
    string ID = 1;
}

message RequestUpdate{
    string ID = 1;
    string Key = 2;
    string Value = 3;
}

message Response{
    string error = 1;
    bool ok = 2;
}

message RequestDelete{
    string ID = 1;
}

message RequestCreate{
    Vote Vote = 1;
}

service VoteService{
    rpc GetByPollID (RequestGet) returns (stream Vote);
    rpc Update (RequestUpdate) returns (Response);
    rpc Delete (RequestDelete) returns (Response);
    rpc Create (RequestCreate) returns (Response);
}